--- a/gestao-de-escala-frontend/index copy.html
+++ b/gestao-de-escala-frontend/index copy.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>AGU - Cadastro de Advogado</title>
+  <title>AGU - Home</title>
 
   <!-- Fontes personalizadas para este modelo -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -201,83 +201,10 @@
 
           <!-- Page Heading -->
           <div class="container-fluid">
-            <h1 class="h3 titulo-formulario"><strong>Cadastrar Advogado</strong></h1>
-            <hr>
-            <form id="form" @submit.prevent="" >
-                <input type="hidden" name="_token" value="ayg6KirGuH8DsKdVd1vfjYbLmTAPWMuhWDa1aAvR">
-                <div class="row">
-                  <div class="col-md-6">
-                      <div class="form-group">
-                          <label for="nome_advogado">Nome</label>
-                          <input type="text" name="nome_advogado" id="nome_advogado" class="form-control form-control-sm" required>                         
-                      </div>
-                  </div>
-                  <div class="col-md-5">
-                    <div class="form-group"> 
-                      <div class="col-md-6">
-                        <label for="numero_OAB">Número OAB</label>
-                        <input type="text" name="numero_OAB" id="numero_OAB" class="form-control form-control-sm">   
-                      </div>                         
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col mb-3 ml-3 md-3">
-                        <button  type="submit" id="cadastrarAdvogado" class="btn btn-primary">
-                            Cadastrar
-                        </button>
-                        <button type="reset" class="btn btn-secondary" onclick="refresh()">Limpar</button>
-                    </div>
-                </div>
-                <br>
-               <!-- <div class="row mt-3 justify-content-end mr-1">
-                    <div>
-                      <div class="btn-group btn-group-sm" role="group">
-                        <button id="editar" type="button" onclick="oController.editar(this)" class="btn btn-secondary"
-                                data-url="#" title="Editar">
-                            <i class="far fa-edit"></i>
-                        </button>
-                        <button id="excluir" type="button" onclick="oController.excluir(this)" class="btn btn-secondary"
-                                data-url="#" title="Excluir">
-                            <i class="far fa-trash-alt"></i>
-                        </button>
-                        <button id="tabela_advogado" type="button" onclick="oController.imprimirTabelaProcurador(this)"
-                                class="btn btn-secondary" data-url="https://localhost:8080/escala/imprimir-escala-plantao"
-                                title="Imprimir tabela de advogado" data-placement="top">
-                                <i class="fas fa-print"></i>
-                        </button>
-                    </div>
-                    </div>
-                </div>-->
-            </form>
+            <h1 class="h3 titulo-formulario"><strong>Bem-vindo ao GERENCIADOR DE ESCALA!</strong></h1>
         </div>
 
           <!-- DataTales Example -->
-          <div class="card shadow mb-4">
-            <div class="card-header py-3">
-              <h6 class="m-0 font-weight-bold text-primary">Tabela de Advogados</h6>
-            </div>
-            <div class="card-body">
-              <div class="table-responsive">
-                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                  <thead>
-                    <tr>
-                      <th>NOME</th>
-                      <th>NÚMERO OAB</th>
-                    </tr>
-                  </thead>
-                  <tfoot>
-                    <tr>
-                      <th>NOME</th>
-                      <th>NÚMERO OAB</th>
-                    </tr>
-                  </tfoot>
-                  <tbody>
-                    <!-- js/services/advogado.js  -->
-                  </tbody>
-                </table>
-              </div>
-            </div>
-          </div>
 
         </div>
         <!-- /.container-fluid -->
@@ -341,10 +268,8 @@
 
   <!-- Page level custom scripts -->
   <script src="js/demo/datatables-demo.js"></script>
-  <!-- Service -->
-  <script type="module" src="js/services/advogado.js"></script>
-  <script src="./js/axios.min.js"></script>
 
 </body>
 
 </html>
+
