--- a/gestao-de-escala-frontend/pesquisa-escala.html
+++ b/gestao-de-escala-frontend/pesquisa-escala.html
@@ -140,8 +140,8 @@
                       <div class="form-group">
                         <label for="vara">Vara</label>
                         <select class="browser-default custom-select custom-select-sm" id="vara">
-                          <option selected></option>
-                          <option value="1ª Vara Federal">1ª Vara Federal</option>
+                          <option selected>Todas com mutirão</option>
+                          <!-- <option value="1ª Vara Federal">1ª Vara Federal</option>
                           <option value="2ª Vara Federal">2ª Vara Federal</option>
                           <option value="5ª Vara Federal">5ª Vara Federal</option>
                           <option value="JEF Altamira">JEF Altamira</option>
@@ -175,7 +175,7 @@
                           <option value="2ª Vara Federal Santarém">2ª Vara Federal Santarém</option>
                           <option value="3ª Vara Cível Santarém">3ª Vara Cível Santarém</option>
                           <option value="JEF Tucuruí">JEF Tucuruí</option>
-                          <option value="Vara Federal Tucuruí">Vara Federal Tucuruí</option>
+                          <option value="Vara Federal Tucuruí">Vara Federal Tucuruí</option> -->
                         </select>
                       </div>
                     </div>
