--- a/gestao-de-escala-frontend/pesquisa-escala.html
+++ b/gestao-de-escala-frontend/pesquisa-escala.html
@@ -185,14 +185,14 @@
                         </select>
                       </div>
                     </div>
-                    <div class="col-md-3">
+                    <!-- <div class="col-md-3">
                       <div class="form-group">
                         <label for="vara">Período do Mutirão</label>
                         <select class="browser-default custom-select custom-select-sm" id="mutirao">
                           <option selected>Vara selecionada sem Mutirão</option>
                         </select>
                       </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="row">
                     <div class="col-md-3">
