Revert "Merge branch 'merge-cadu' into 'main'"
This reverts commit ef9176196ae0f71bcc2c399c165fc8e08bab8bfd, reversing
changes made to 372e5f5e04e4ac2ff1e4b4c420a3d5c2f2985e46.

--- a/gestao-de-escala-frontend/pesquisa-escala.html
+++ b/gestao-de-escala-frontend/pesquisa-escala.html
@@ -126,16 +126,10 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="form-group">
-                            <label for="data_escala">Data inicial</label>
+                            <label for="data_escala">Data</label>
                             <input type="date" name="data" id="data" class="form-control form-control-sm">
                         </div>
                     </div>
-                    <div class="col-md-3">
-                      <div class="form-group">
-                          <label for="data2">Data final</label>
-                          <input type="date" name="data2" id="data2" class="form-control form-control-sm">
-                      </div>
-                  </div>
                     <div class="col-md-3">
                         <div class="form-group">
                             <label for="hora">Hora</label>
@@ -146,8 +140,8 @@
                       <div class="form-group">
                         <label for="vara">Vara</label>
                         <select class="browser-default custom-select custom-select-sm" id="vara">
-                          <option selected></option>
-                          <option value="1ª Vara Federal">1ª Vara Federal</option>
+                          <option selected>Todas com mutirão</option>
+                          <!-- <option value="1ª Vara Federal">1ª Vara Federal</option>
                           <option value="2ª Vara Federal">2ª Vara Federal</option>
                           <option value="5ª Vara Federal">5ª Vara Federal</option>
                           <option value="JEF Altamira">JEF Altamira</option>
@@ -181,18 +175,18 @@
                           <option value="2ª Vara Federal Santarém">2ª Vara Federal Santarém</option>
                           <option value="3ª Vara Cível Santarém">3ª Vara Cível Santarém</option>
                           <option value="JEF Tucuruí">JEF Tucuruí</option>
-                          <option value="Vara Federal Tucuruí">Vara Federal Tucuruí</option>
+                          <option value="Vara Federal Tucuruí">Vara Federal Tucuruí</option> -->
                         </select>
                       </div>
                     </div>
-                    <!-- <div class="col-md-3">
+                    <div class="col-md-3">
                       <div class="form-group">
                         <label for="vara">Período do Mutirão</label>
                         <select class="browser-default custom-select custom-select-sm" id="mutirao">
                           <option selected>Vara selecionada sem Mutirão</option>
                         </select>
                       </div>
-                    </div> -->
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-md-3">
