html de pesquisar escala adicionado

--- a/gestao-de-escala-frontend/pesquisa-escala.html
+++ b/gestao-de-escala-frontend/pesquisa-escala.html
@@ -126,10 +126,16 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="form-group">
-                            <label for="data_escala">Data</label>
+                            <label for="data_escala">Data inicial</label>
                             <input type="date" name="data" id="data" class="form-control form-control-sm">
                         </div>
                     </div>
+                    <div class="col-md-3">
+                      <div class="form-group">
+                          <label for="data2">Data final</label>
+                          <input type="date" name="data2" id="data2" class="form-control form-control-sm">
+                      </div>
+                  </div>
                     <div class="col-md-3">
                         <div class="form-group">
                             <label for="hora">Hora</label>
@@ -176,14 +182,6 @@
                           <option value="3ª Vara Cível Santarém">3ª Vara Cível Santarém</option>
                           <option value="JEF Tucuruí">JEF Tucuruí</option>
                           <option value="Vara Federal Tucuruí">Vara Federal Tucuruí</option> -->
-                        </select>
-                      </div>
-                    </div>
-                    <div class="col-md-3">
-                      <div class="form-group">
-                        <label for="vara">Período do Mutirão</label>
-                        <select class="browser-default custom-select custom-select-sm" id="mutirao">
-                          <option selected>Vara selecionada sem Mutirão</option>
                         </select>
                       </div>
                     </div>
