front end atualizado para usar o novo endpoint

--- a/gestao-de-escala-frontend/editar-pautista.html
+++ b/gestao-de-escala-frontend/editar-pautista.html
@@ -220,7 +220,8 @@
                           <select class="browser-default custom-select custom-select-sm" id="status">
                             <option selected>Ativo</option>
                             <option value="Licença">Licença</option>
-                            <option value="Férias">Férias</option> 
+                            <option value="Férias">Férias</option>
+                            <option value="Inativo">Inativo</option>  
                           </select>
                       </div>
                   </div>
