feat: Adicionado máscara de hora na página de cadastrar pautas

--- a/gestao-de-escala-frontend/cadastro-pauta.html
+++ b/gestao-de-escala-frontend/cadastro-pauta.html
@@ -216,7 +216,7 @@ dd/mm/aaaa
                     <div class="col-md-1">
                         <div class="form-group">
                             <label for="hora">Hora</label>
-                            <textarea rows="1" name="hora" id="hora-pauta" class="form-control form-control-sm"></textarea>
+                            <textarea rows="1" name="hora" id="hora-pauta" class="form-control form-control-sm" placeholder="hh:mm"></textarea>
                         </div>
                     </div>
                     <div class="col-md-1">
