Trocado posicionamento do link pesquisar escala

--- a/gestao-de-escala-frontend/cadastro-pauta.html
+++ b/gestao-de-escala-frontend/cadastro-pauta.html
@@ -81,7 +81,7 @@
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <a class="collapse-item" href="gera-escala.html">Gerar</a>
-            <a class="collapse-item" href="pesquisa-escala.html">Pesquisar</a>
+            
           </div>
         </div>
       </li>
@@ -96,7 +96,7 @@
           <div class="bg-white py-2 collapse-inner rounded">
             <a class="collapse-item" href="pesquisa-pautista.html">Pautista</a>
             <a class="collapse-item" href="pesquisa-advogado.html">Advogado</a>
-            <a class="collapse-item" href="pesquisa-pauta.html">Pauta</a>
+            <a class="collapse-item" href="pesquisa-escala.html">Escala</a>
           </div>
         </div>
       </li>
