bug:correções de bugs (em andamento)

--- a/gestao-de-escala-frontend/gera-escala.html
+++ b/gestao-de-escala-frontend/gera-escala.html
@@ -175,9 +175,9 @@
                 <div class="form-group">
                     <label for="grupo">Grupo</label>
                     <select class="browser-default custom-select custom-select-sm" id="grupo">
-                      <option selected>Todos</option>
-                      <option value="Preposto">Preposto</option>
-                      <option value="Procurador">Procurador</option>
+                      <option selected>TODOS</option>
+                      <option value="PREPOSTO">PREPOSTO</option>
+                      <option value="PROCURADOR">PROCURADOR</option>
                     </select>
                 </div>
               </div>
