feat:Adicionado popups de confirmação de exclusão nas páginas de pesquisa de pautistas e advogados

--- a/gestao-de-escala-frontend/pesquisa-pautista.html
+++ b/gestao-de-escala-frontend/pesquisa-pautista.html
@@ -261,16 +261,16 @@
                 <div class="row mt-3 justify-content-end mr-1">
                  <div class="btn-group btn-group-sm" role="group">
                     <a class="collapse-item" href="editar-pautista.html">
-                      <button id="editar" type="button"  class="btn btn-secondary"
+                      <button id="editar" type="button"  class="btn btn-secondary mr-2 rounded"
                             data-url="#" title="Editar">
                         <i class="far fa-edit"></i>
                     </button></a>
-                    <button id="excluir" type="button" class="btn btn-secondary"
+                    <button id="excluir" type="button" class="btn btn-danger mr-2 rounded"
                             data-url="#" title="Excluir">
                         <i class="far fa-trash-alt"></i>
                     </button>
                     <button id="tabela_procurador" type="button" 
-                            class="btn btn-secondary" data-url="#S"
+                            class="btn btn-secondary rounded" data-url="#S"
                             title="Imprimir tabela de procurador" data-placement="top" onClick="window.print()">
                             <i class="fas fa-print"></i>
                     </button>
@@ -336,7 +336,7 @@
       
             <!-- Modal body -->
             <div class="modal-body">
-              Deseja realmente excluir a pauta selecionada?
+              Deseja realmente excluir o pautista selecionada?
             </div>
       
             <!-- Modal footer -->
