fix:Corrigido erro gramatical nas mensagens dos popups

--- a/gestao-de-escala-frontend/pesquisa-pautista.html
+++ b/gestao-de-escala-frontend/pesquisa-pautista.html
@@ -336,7 +336,7 @@
       
             <!-- Modal body -->
             <div class="modal-body">
-              Deseja realmente excluir o pautista selecionada?
+              Deseja realmente excluir o pautista selecionado?
             </div>
       
             <!-- Modal footer -->
