feat:Temporiamente removido a opção de indicar peso no cadastro de pautistas

--- a/gestao-de-escala-frontend/cadastro-pautista.html
+++ b/gestao-de-escala-frontend/cadastro-pautista.html
@@ -251,10 +251,10 @@
                           <label for="categoria">Peso</label>
                           <select class="browser-default custom-select custom-select-sm" id="peso">
                             <option selected>1</option>
-                            <option value="2">2</option>
+                            <!-- <option value="2">2</option>
                             <option value="3">3</option>
                             <option value="4">4</option>
-                            <option value="5">5</option>
+                            <option value="5">5</option> -->
                           </select>
                       </div>
                     </div>
